# Ontology

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  TASKS.md  compose.neo4j.yml  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.backend.json  vite.agent-api.config.ts
.github/: pull_request_template.md
docs/: agent-pipeline.md  alicloud-agent-demo-deployment.md  api-contracts.md  api-design-draft.md  architecture.md  backend-integration-guide.md  data-contracts.md  data-model.md  demo-data-governance.md  demo-to-production-roadmap.md  deterministic-source-mapping.md  development-guide.md  domain-evaluation-cases.md  explorer-alignment-audit.md  extension-roadmap.md  frontend-architecture.md  frontend-bundle-report.md  frontend-demo-positioning.md  governance.md  governed-publication.md  graph-runtime-evaluation.md  implementation-roadmap.md  interaction-design.md  legacy-data-migration.md  local-development.md  mapping-guidelines.md  modeling-principles.md  namespace-policy.md  next-development-roadmap.md  ontology-debug-repro.md  op30-leak-rate-demo-model.md  phase-1-canonical-baseline.md  phase-2-deterministic-agent-pipeline.md  phase-3a-agent-api.md  phase-3b-neo4j-repository.md  phase-3c-sse-persistence.md  phase-4-provider-deepseek-extension.md  phase-4a-llm-semantic-parser.md  phase-4b-evidence-grounded-answer-composer.md  phase-4c-governed-document-evidence.md  (+22 more)
examples/: README.md
migrations/: README.md  (+1 more)
(+267 files in other folders)
