[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "manufacturing-knowledge-engineering-tooling"
version = "0.1.0"
description = "Validation and release tooling for the Manufacturing Knowledge Graph Explorer"
requires-python = ">=3.11"
dependencies = [
  "jsonschema[format]>=4.23,<5",
  "pyshacl>=0.30,<1",
  "PyYAML>=6,<7",
  "rdflib>=7,<8",
]

[tool.setuptools]
py-modules = []
